--- a/templates/lhe/create_lhe_bab2_a.html
+++ b/templates/lhe/create_lhe_bab2_a.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block contents%}
-
+<h4>Nomor Laporan Hasil Evaluasi: <b>{{nomor_lhe}}</b></h4>
 <h5>Bab 2: Uraian Hasil Evaluasi dan Pembinaan</h5>
 <hr/>
 <div class="p-2">
