fyuhhhh terima kasih Tuhan

--- a/templates/base.html
+++ b/templates/base.html
@@ -355,7 +355,7 @@
                                 </h6>
                                 {% if pending_lhe.count > 0%}
                                 {% for lhe in pending_lhe %}
-                                    <a class="dropdown-item d-flex align-items-center" href="/lhe/add/b2/a/{{lhe.id_lhe}}/">
+                                    <a class="dropdown-item d-flex align-items-center" href="/lhe/add/b1/{{lhe.id_lhe}}/">
                                         <div class="dropdown-list-image mr-3">
                                             <img class="rounded-circle" src="{% static 'img/undraw_profile_2.svg' %}"
                                                 alt="...">
