--- a/templates/master/create_surat_tugas.html
+++ b/templates/master/create_surat_tugas.html
@@ -12,31 +12,31 @@
 	{% csrf_token%}
 <table>
     <tr>
-		<td style="width: 300px">Nomor Surat Tugas:</td>
-		<td style="width: 500px">{{forms.nomor_surat}}</td>
+		<td style="width: 40%">Nomor Surat Tugas:</td>
+		<td style="width: 60%">{{forms.nomor_surat}}</td>
 	</tr>
     <tr>
-		<td style="width: 300px">Lokasi Dibuat Surat:</td>
+		<td>Lokasi Dibuat Surat:</td>
 		<td >{{forms.lokasi_surat}}</td>
 	</tr>
     <tr>
-		<td style="width: 300px">Tanggal Dibuat Surat:</td>
+		<td>Tanggal Dibuat Surat:</td>
 		<td >{{forms.tgl_surat}}</td>
 	</tr>
     <tr>
-		<td style="width: 300px">Tujuan Penugasan:</td>
+		<td>Tujuan Penugasan:</td>
 		<td >{{forms.tujuan}}</td>
 	</tr>
     <tr>
-		<td style="width: 300px">Lokasi Penugasan:</td>
+		<td>Lokasi Penugasan:</td>
 		<td >{{forms.lokasi}}</td>
 	</tr>
     <tr>
-		<td style="width: 300px">Tanggal Mulai Tugas:</td>
+		<td>Tanggal Mulai Tugas:</td>
 		<td >{{forms.tgl_awal_tugas}}</td>
 	</tr>
     <tr>
-		<td style="width: 300px">Tanggal Akhir Tugas:</td>
+		<td>Tanggal Akhir Tugas:</td>
 		<td >{{forms.tgl_akhir_tugas}}</td>
 	</tr>
     
