--- a/templates/master/create_surat_tugas_detail.html
+++ b/templates/master/create_surat_tugas_detail.html
@@ -9,7 +9,7 @@
 <div class="p-2 border rounded border-1 my-3 border-primary d-flex justify-content-center">
     <table>
         <tr>
-            <th style="min-width:200px">Nomor Surat Tugas:</th>
+            <th style="min-width:40%">Nomor Surat Tugas:</th>
             <td>{{data.nomor_surat}}</td>
         </tr>
         <tr>
@@ -42,8 +42,8 @@
  <div class="overflow-auto">
     <table class="table border rounded">
         <thead>
-            <th style="min-width:100px">No.</th>
-            <th style="min-width:200px">Kode</th>
+            <th style="min-width:20%">No.</th>
+            <th style="min-width:30%">Kode</th>
             <th>Detail</th>
             <th></th>
         </thead>
@@ -83,10 +83,10 @@
  <div class="overflow-auto">
     <table class="table border rounded">
         <thead>
-            <th style="min-width:100px">No.</th>
-            <th style="min-width:200px">N.I.P</th>
-            <th  style="min-width:300px">Nama Pegawai</th>
-            <th style="min-width:300px">Jabatan</th>
+            <th style="min-width:10%">No.</th>
+            <th style="min-width:20%">N.I.P</th>
+            <th  style="min-width:40%">Nama Pegawai</th>
+            <th style="min-width:30%">Jabatan</th>
             <th></th>
         </thead>
          {% if list_peserta.count == 0%}
