--- a/templates/lhe/create_lhe_bab2_a.html
+++ b/templates/lhe/create_lhe_bab2_a.html
@@ -42,10 +42,10 @@
     <form method="post">
         {% csrf_token%}
         <div class="d-flex justify-content-start">
-            <label for="awal" class="p-2">Periode Awal: </label> <input id="awal" type="date" class="w-50 form-control" name="awal_periode" required/>
+            <label for="awal" class="p-2">Periode Awal: </label> <input id="awal" type="date" class="w-50 form-control" name="awal_periode" value="{{periode_awal}}" required/>
         </div>
         <div class="d-flex justify-content-start">
-            <label for="akhir" class="p-2">Periode Akhir: </label> <input id="akhir" type="date" class="w-50 form-control" name="akhir_periode" required/>
+            <label for="akhir" class="p-2">Periode Akhir: </label> <input id="akhir" type="date" class="w-50 form-control" name="akhir_periode" value="{{periode_akhir}}" required/>
         </div>
         <p><i>6. Tim Evaluasi dan Pembinaan:</i></p>
         <div>
