--- a/templates/base.html
+++ b/templates/base.html
@@ -209,13 +209,13 @@
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#laporanTugas"
                     aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fa fa-file-archive"></i>
-                    <span>Laporan Tugas</span>
+                    <span>Resume Tugas</span>
                 </a>
                 <div id="laporanTugas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Manajemen Laporan Tugas:</h6>
-                        <a class="collapse-item" href="buttons.html">Daftar Laporan Tugas</a>
-                        <a class="collapse-item" href="cards.html">Menambah Laporan Tugas</a>
+                        <h6 class="collapse-header">Manajemen Resume Tugas:</h6>
+                        <a class="collapse-item" href="#">Daftar Resume Tugas</a>
+                        <a class="collapse-item" href="#">Menambah Resume Tugas</a>
                     </div>
                 </div>
             </li>
