--- a/templates/master/dashboard.html
+++ b/templates/master/dashboard.html
@@ -52,32 +52,32 @@
                                  <div class="col-lg-6 mb-4">
                                     <div class="card bg-info text-white shadow">
                                         <div class="card-body">
-                                            Total Evaluasi Tugas Selesai
-                                            <div class="text-white-50 h4">{{jml_sukses_surattugas}}</div>
+                                            Total Laporan Hasil Evaluasi Selesai
+                                            <div class="text-white-50 h4">{{jml_sukses_lhe}}</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 mb-4">
                                     <div class="card bg-warning text-white shadow">
                                         <div class="card-body">
-                                            Total Evaluasi Tugas Pending
-                                            <div class="text-white-50 h4">{{jml_pending_surattugas}}</div>
+                                            Total Laporan Hasil Evaluasi Pending
+                                            <div class="text-white-50 h4">{{jml_pending_lhe}}</div>
                                         </div>
                                     </div>
                                 </div>
                                  <div class="col-lg-6 mb-4">
                                     <div class="card bg-danger text-white shadow">
                                         <div class="card-body">
-                                            Laporan Tugas Selesai
-                                            <div class="text-white-50 h4">{{jml_sukses_surattugas}}</div>
+                                            Total Resume Selesai
+                                            <div class="text-white-50 h4">0</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-6 mb-4">
                                     <div class="card bg-secondary text-white shadow">
                                         <div class="card-body">
-                                            Laporan Tugas Pending
-                                            <div class="text-white-50 h4">{{jml_pending_surattugas}}</div>
+                                            Total Resume Pending
+                                            <div class="text-white-50 h4">0</div>
                                         </div>
                                     </div>
                                 </div>
