--- a/templates/base.html
+++ b/templates/base.html
@@ -351,7 +351,7 @@
                             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in " style="height: 400px;overflow-y: scroll;"
                                 aria-labelledby="messagesDropdown">
                                 <h6 class="dropdown-header">
-                                    Pending Evaluasi Tugas
+                                    Pending Laporan Hasil Evaluasi (LHE)
                                 </h6>
                                 {% if pending_lhe.count > 0%}
                                 {% for lhe in pending_lhe %}
