--- a/templates/lhe/create_lhe_bab2_a.html
+++ b/templates/lhe/create_lhe_bab2_a.html
@@ -14,7 +14,7 @@
     <p>Evaluasi dan Pembinaan Reguler</p>
     <p><i>3. Tujuan Evaluasi dan Pembinaan:</i></p>
     {% for tujuan in tujuan_evaluasi %}
-    <p style="margin-left: 100px;">{{forloop.counter}}. {{tujuan.detail|title}} <a href="/lhe/del/b2/a/t/{{tujuan.id_lhe.id_lhe}}/{{tujuan.id_tujuan}}" class="btn text-danger small">x</a></p>
+    <p style="margin-left: 100px;">{{forloop.counter}}. {{tujuan.detail|title}} <a href="/lhe/del/b2/a/t/{{tujuan.id_lhe.id_lhe}}/{{tujuan.id_tujuan}}" class="badge badge-danger small">X</a></p>
     {% endfor %}
 
     <form method="post" class="my-3">
@@ -27,7 +27,7 @@
     
     <p><i>4. Sasaran Evaluasi dan Pembinaan:</i></p>
     {% for sasaran in sasaran_evaluasi %}
-    <p style="margin-left: 100px;">{{forloop.counter}}. {{sasaran.detail|title}} <a href="/lhe/del/b2/a/s/{{sasaran.id_lhe.id_lhe}}/{{sasaran.id_sasaran}}" class="btn text-danger small">x</a></p>
+    <p style="margin-left: 100px;">{{forloop.counter}}. {{sasaran.detail|title}} <a href="/lhe/del/b2/a/s/{{sasaran.id_lhe.id_lhe}}/{{sasaran.id_sasaran}}" class="badge badge-danger small">X</a></p>
     {% endfor %}
     
     <form method="post" class="my-3">
