--- a/templates/lhe/create_lhe_bab1.html
+++ b/templates/lhe/create_lhe_bab1.html
@@ -28,7 +28,7 @@
     <p><b>B. Rekomendasi</b></p>
     <p>Terhadap hasil evaluasi dan pembinaan tersebut di atas, Kepala {{lokasi_tugas}} telah sepakat dan bersedia mengambil langkah-langkah perbaikan guna menindaklanjuti atas rekomendasi tim Evaluasi dan Pembinaan sebagaimana diuraikan dalam Bab II laporan ini.</p>
     <p class="my-4">
-        <a class="btn btn-success" href="/lhe/add/b2/a/{{id_lhe}}" ><i>Melanjutkan ke Bab II</i> &rarr;</a>
+        <a class="btn btn-primary" href="/lhe/add/b2/a/{{id_lhe}}" ><i>Melanjutkan ke Bab II</i> &rarr;</a>
     </p>
 </div>
 
