--- a/templates/lhe/create_lhe_bab2_a.html
+++ b/templates/lhe/create_lhe_bab2_a.html
@@ -78,7 +78,8 @@
                 {% endfor %}
             </table>    
         </div>
-        <button type="submit" class="btn btn-primary my-3">Lanjutkan Point B &rarr; Data Umum...</button>
+        <a href="/lhe/add/b1/{{id_lhe}}" class="btn btn-secondary mx-2"><i>&larr; Kembali ke Bab I</i></a>
+        <button type="submit" class="btn btn-primary my-3">Lanjutkan Bab II.B Data Umum &rarr;</button>
     </form>
     
 </div>
