--- a/templates/lhe/create_lhe_bab2_a_dataumum.html
+++ b/templates/lhe/create_lhe_bab2_a_dataumum.html
@@ -20,7 +20,7 @@
         </div>
     </form>    
     <a href="/lhe/add/b2/a/{{id_lhe}}" class="btn btn-secondary mx-2"><i>&larr; Kembali ke Bab II.A Program Kerja Valbin</i></a>
-    <a class="btn btn-primary my-3" href="#"><i>Lanjutkan Bab II.C Ketatausahaan &rarr;</i></a>
+    <a class="btn btn-primary my-3" href="/lhe/add/b2/tu/{{id_lhe}}"><i>Lanjutkan Bab II.C Ketatausahaan &rarr;</i></a>
 </div>
 
 {% endblock%}
